[workspace]
resolver = "2"
members = [
  "helix-core",
  "helix-view",
  "helix-term",
  "helix-tui",
  "helix-lsp",
  "helix-event",
  "helix-dap",
  "helix-loader",
  "helix-vcs",
  "helix-parsec",
  "xtask",
]

default-members = [
  "helix-term"
]

[profile.release]
lto = "thin"
# debug = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3

[profile.integration]
inherits = "test"
package.helix-core.opt-level = 2
package.helix-tui.opt-level = 2
package.helix-term.opt-level = 2

[workspace.dependencies]
tree-sitter = { version = "0.20" }
nucleo = "0.2.0"

[package]
version = "23.10"
authors = ["Blaž Hrastnik (Patched!) <blaz@mxxn.io>"]
edition = "2021"
license = "MPL-2.0"
categories = ["editor", "command-line-utilities"]
repository = "https://github.com/helix-editor/helix"
homepage = "https://helix-editor.com"
rust-version = "1.76"
